--- a/signup.html
+++ b/signup.html
@@ -19,9 +19,10 @@
 </head>
 <body>
   <div class="d-flex align-items-center" id="form-spacing">
-    <img src="" id="login-image" class="login-image">
+    <div src="" id="login-image" class="login-image">
+      </div>
 
-    <form id="student-signup-form">
+    <form id="student-signup-form" class="collapse.show">
       <div class="form-col">
         <label for="Name">Name</label>
 
@@ -116,7 +117,7 @@
     
       </form>  
 
-      <form id="teacher-signup-form" class="">
+      <form id="teacher-signup-form" class="collapse">
         <div class="form-col">
           <label for="Name">Name</label>
   
