--- a/signup.html
+++ b/signup.html
@@ -108,8 +108,11 @@
       </div>
 
       <div class="form-group">
-        <label for="inputProgressMessages">Would you like to receive text updates about your progress?</label>
-        <input type="radio" class="form-control" id="inputProgressMessages" required>
+        <label for="inputProgressMessages">Would you like to receive updates about your progress?</label>
+        <input type="radio" class="form-control" id="Yes, text message" checked>
+        <input type="radio" class="form-control" id="Yes, e-mail">
+        <input type="radio" class="form-control" id="Yes, text and email">
+        <input type="radio" class="form-control" id="No">
       </div>
 
       <div class="form-group">
@@ -117,7 +120,7 @@
         <input type="radio" class="form-control" id="Yes, text message" checked>
         <input type="radio" class="form-control" id="Yes, e-mail">
         <input type="radio" class="form-control" id="Yes, text and email">
-        <input type="radio" class="form-control" id="No">
+        <input type="radio" class="form-control" id="No" >
       </div>
 
       <button type="submit" class="btn btn-primary">Sign up</button>
