--- a/signup.html
+++ b/signup.html
@@ -22,11 +22,15 @@
     <div src="" id="login-image" class="login-image">
       </div>  
    
-      <button id="signup-form-toggler" type="button" class="btn btn-primary" data-bs-toggle= "collapse" aria-expanded="true">
+      <button id="student-signup-btn" type="button" class="btn btn-primary" data-bs-toggle= "collapse" aria-expanded="true">
       <span>Student</span>
     </button>
+    <button id="teacher-signup-btn" type="button" class="btn btn-primary" data-bs-toggle= "collapse" aria-expanded="true">
+      <span>Teacher</span>
+    </button>
+
 <!-- Student signup form-->
-    <form id="student-signup-form" class="collapse.show">
+    <form id="student-signup-form" class="collapse">
 
       <div class="form-col">
         <label for="Name">Name</label>
@@ -241,12 +245,20 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script>
-    $('#signup-form-toggler').on('click',function() {
-      $("#student-signup-form").toggleClass("collapse.show");
-      $("#teacher-signup-form").toggleClass("collapse.show");
-      $("#student-signup-form").toggleClass("collapse");
-      $("#teacher-signup-form").toggleClass("collapse");
+    $('#student-signup-btn').on('click',function() {
+      $("#student-signup-form").addClass("collapse.show");
+      $("#student-signup-form").removeClass("collapse");
+      $("#teacher-signup-form").removeClass("collapse.show");
+      $("#teacher-signup-form").addClass("collapse")
     });
+
+    $('#teacher-signup-btn').on('click',function() {
+      $("#teacher-signup-form").addClass("collapse.show");
+      $("#teacher-signup-form").removeClass("collapse");
+      $("#student-signup-form").removeClass("collapse.show");
+      $("#student-signup-form").addClass("collapse")
+    });
+    
   </script>
 
 </body>
