--- a/signup.html
+++ b/signup.html
@@ -120,19 +120,27 @@
         </div>
 
         <div class="form-group collapse fifthPage contact">
-          <label for="inputProgressMessages">Would you like to receive updates about your progress?</label>
-          <input type="radio" class="form-control" id="Yes, text message" checked>
-          <input type="radio" class="form-control" id="Yes, e-mail">
-          <input type="radio" class="form-control" id="Yes, text and email">
-          <input type="radio" class="form-control" id="No">
+        <p>Would you like to receive updates about your progress?</p>
+          <input name ="progressUpdates" type="radio" checked>
+          <label>Yes, text message</label><br>
+          <input name ="progressUpdates" type="radio">
+          <label>Yes, e-mail</label><br>
+          <input name ="progressUpdates" type="radio">
+          <label>Yes, text and email</label><br>
+          <input name ="progressUpdates" type="radio">
+          <label>No</label><br>
         </div>
 
         <div class="form-group collapse fifthPage contact">
-          <label for="inputNewsletterMessages">Would you like to receive updates about newletters on new features or new ways of earning?</label>
-          <input type="radio" class="form-control" id="Yes, text message" checked>
-          <input type="radio" class="form-control" id="Yes, e-mail">
-          <input type="radio" class="form-control" id="Yes, text and email">
-          <input type="radio" class="form-control" id="No" >
+        <p>Would you like to receive updates about newletters on new features or new ways of earning?</p>
+            <input name="newsletterUpdates" type="radio"  checked>
+            <label>Yes, text message</label><br>
+            <input name="newsletterUpdates" type="radio" >
+            <label>Yes, e-mail</label><br>
+            <input name="newsletterUpdates" type="radio" >
+            <label>Yes, text and email</label><br>
+            <input name="newsletterUpdates" type="radio" >
+            <label>No</label><br>
         </div>
 <!-- These buttons allow you to navigate the form-->
         <div class="form-nav-btns d-flex justify-content-end"> 
