--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
         </div>
       
 <!-- Student signup form-->
-      <form id="student-signup-form" class="collapse">
+      <form id="student-signup-form" class="collapse" action="signup.php" method="post">
 
         <div class="form-col collapse.show firstPage">
           <label for="Name">Name</label>
@@ -162,7 +162,7 @@
 
 <!-- Teacher signup form-->
 
-      <form id="teacher-signup-form" class="collapse">
+      <form id="teacher-signup-form" class="collapse" action="signup.php" method="post">
         <div class="form-col collapse.show firstPage">
           <label for="Name">Name</label>
             <div class="form-row">
