--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="styles/login_styles.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
   <div class="d-flex flex-column align-items-center justify-content-center" id="form-spacing">
     <h2>I am logging in as a</h2>
@@ -43,6 +44,15 @@
           <input type="password" class="form-control" id="inputPassword4" required>
         </div>
       </div>
+
+      <div class="form-group">
+        <input type="checkbox"  id="showPassword">
+        <label for="showPassword">Show password</label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox"  id="rememberMe">
+        <label for="rememberMe">Remember me next time</label>
+      </div>    
           <button type="submit" name="student" class="btn btn-primary">Login</button>
     </form>
 <!--This is the teacher login form-->
@@ -58,6 +68,15 @@
           <input type="password" class="form-control" id="inputPassword4" required>
         </div>
       </div>
+      
+      <div class="form-group">
+        <input type="checkbox"  id="showPassword">
+        <label for="showPassword">Show password</label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox"  id="rememberMe">
+        <label for="rememberMe">Remember me next time</label>
+      </div>    
           <button type="submit" name="teacher" class="btn btn-primary">Login</button>
     </form>
 
