--- a/contact.html
+++ b/contact.html
@@ -252,22 +252,16 @@
             <div class="col text-center ">
                 <p>2021 Eureka All rights reserved </p>
             </div>
-        
         </div>
       </footer>
     </div>
-    
   </div>
-
 </div>
-
-
-
-  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="script/index_script.js"></script>
+<script src="script/signup_form.js"></script>
 
   </body>
 </html>
